t.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: computervision-deployment
spec:
  replicas: 5  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: computervision
  template:
    metadata:
      labels:
        app: computervision
    spec:
      containers:
        - name: computervision-container
          image: 'localhost:5000/computervision:2.0'
          ports:
            - containerPort: 8024
      restartPolicy: Always  # Restart policy for the container
---
apiVersion: v1
kind: Service
metadata:
  name: computervision-service
spec:
  selector:
    app: computervision
  ports:
    - protocol: TCP
      port: 8024       # The port that the service will expose
      targetPort: 8024  # The port on the container to direct traffic to
  type: LoadBalancer  # Change to NodePort if running locally or without a cloud provider
