web-app-deployyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app.kubernetes.io/name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app1
    spec:
      containers:
      - name: app1
        image: nginx
        command:
          - /bin/sh
          - -c
          - "echo 'Welcome to App 1!' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
      dnsConfig:
        options:
          - name: ndots
            value: "2"

---

apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    app.kubernetes.io/name: app1
spec:
  selector:
    app.kubernetes.io/name: app1
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app.kubernetes.io/name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app2
    spec:
      containers:
      - name: app2
        image: nginx
        command:
          - /bin/sh
          - -c
          - "echo 'Welcome to App 2!' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
      dnsConfig:
        options:
          - name: ndots
            value: "2"

---

apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app.kubernetes.io/name: app2
spec:
  selector:
    app.kubernetes.io/name: app2
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 80
